Passing in JVM args to the mx command via environment variables and also increasing the max system file and map counts. Moving fastr to the end, in the list of GraalVM suite components